# tac_train

./: README
number1/: README_FIRST.txt
number1/dga_src/: main.c  main2.c
number2/: CMakeLists.txt  README_FIRST.txt
number2/src/: divide_me.c  divide_me.h  main.c
number3/: CMakeLists.txt  README_FIRST.txt  big_hint.txt  hints.txt
number3/src/: factors.c  factors.h  main.c
number4/: CMakeLists.txt  README.txt
number4/src/: main.c  vcdio.c  vcdio.h
number5/: CMakeLists.txt  README_FIRST.txt  README_FIRST.txt~
number5/src/: cube.c
